outputs_20260401-054144-0c590ace/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\src\egtm_atom_tmadc_consolidated.c:20:10: fatal error: Compilers.h: No such file or directory
   20 | #include "Compilers.h"
      |          ^~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity.h:22,
                 from C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:1:
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c: In function 'test_TC_G1_001_init_enables_egtm_and_clocks_when_disabled':
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:50:78: error: comparison of integer expressions of different signedness: 'int' and 'unsigned int' [-Werror=sign-compare]
   50 |     TEST_ASSERT_TRUE_MESSAGE((mock_IfxEgtm_PinMap_setAtomTout_getCallCount() >= 1u), "PinMap: At least one AtomTout mapping must be applied");
      |                                                                              ^~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:891:107: note: in definition of macro 'UNITY_TEST_ASSERT'
  891 | #define UNITY_TEST_ASSERT(condition, line, message)                                              do { if (condition) { /* nothing*/ } else { UNITY_TEST_FAIL((line), (message)); } } while (0)
      |                                                                                                           ^~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:50:5: note: in expansion of macro 'TEST_ASSERT_TRUE_MESSAGE'
   50 |     TEST_ASSERT_TRUE_MESSAGE((mock_IfxEgtm_PinMap_setAtomTout_getCallCount() >= 1u), "PinMap: At least one AtomTout mapping must be applied");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:57:86: error: comparison of integer expressions of different signedness: 'int' and 'unsigned int' [-Werror=sign-compare]
   57 |     TEST_ASSERT_TRUE_MESSAGE((mock_IfxCpu_Irq_installInterruptHandler_getCallCount() >= 1u), "Interrupt handler must be installed for TMADC result ISR");
      |                                                                                      ^~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:891:107: note: in definition of macro 'UNITY_TEST_ASSERT'
  891 | #define UNITY_TEST_ASSERT(condition, line, message)                                              do { if (condition) { /* nothing*/ } else { UNITY_TEST_FAIL((line), (message)); } } while (0)
      |                                                                                                           ^~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:57:5: note: in expansion of macro 'TEST_ASSERT_TRUE_MESSAGE'
   57 |     TEST_ASSERT_TRUE_MESSAGE((mock_IfxCpu_Irq_installInterruptHandler_getCallCount() >= 1u), "Interrupt handler must be installed for TMADC result ISR");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c: In function 'test_TC_G2_002_deadtime_is_configured_to_expected_value_for_all_phases':
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:108:72: error: 'mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising' undeclared (first use in this function); did you mean 'mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising'?
  108 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEAD_TIME_S, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "DT rising[0] must be 1e-6 s");
      |                                                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:108:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  108 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEAD_TIME_S, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "DT rising[0] must be 1e-6 s");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:108:72: note: each undeclared identifier is reported only once for each function it appears in
  108 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEAD_TIME_S, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "DT rising[0] must be 1e-6 s");
      |                                                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:108:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  108 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEAD_TIME_S, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "DT rising[0] must be 1e-6 s");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:109:72: error: 'mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling' undeclared (first use in this function); did you mean 'mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling'?
  109 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEAD_TIME_S, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling[0], "DT falling[0] must be 1e-6 s");
      |                                                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_0j4he0zb\test\test_egtm_atom_tmadc_consolidated.c:109:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  109 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEAD_TIME_S, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling[0], "DT falling[0] must be 1e-6 s");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
